# Hackathon

./: .gitignore  CMakeLists.txt  README.md
head/: ClearScreen.hpp  GlobalVariables.hpp  MainScreen.hpp  Marker.hpp  QuizScreen.hpp  RoadmapScreen.hpp  ScoreHandler.hpp  Screen.hpp  ScreenManager.hpp  SyllabusScreen.hpp  WczytywanieDanych.hpp
questions/: pytania.txt  pytania1.txt  pytania10.txt  pytania11.txt  pytania12.txt  pytania13.txt  pytania14.txt  pytania15.txt  pytania2.txt  pytania3.txt  pytania4.txt  pytania5.txt  pytania6.txt  pytania7.txt  pytania8.txt  pytania9.txt
src/: Marker.cpp  QuizScreen.cpp  RoadmapScreen.cpp  ScoreHandler.cpp  Screen.cpp  ScreenManager.cpp  WczytywanieDanych.cpp  main.cpp
